Training a ride duration prediction model on the provided example

--- a/01-intro/Homework.ipynb
+++ b/01-intro/Homework.ipynb
@@ -255,13 +255,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "9642f898-0f2a-49fb-8be6-4964084dd9b9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.2.2'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "sklearn."
+    "sklearn.__version__"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b44a76c5-3d74-43ef-9527-d97ccea51253",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
