--- a/01-intro/Homework.ipynb
+++ b/01-intro/Homework.ipynb
@@ -7,280 +7,319 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from sklearn.feature_extraction import DictVectorizer\n",
+    "from sklearn.linear_model import LinearRegression, Lasso, Ridge\n",
+    "from sklearn.metrics import mean_squared_error"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "ae5cd784-c6b2-4f8b-b98e-d10fcf1d34af",
+   "execution_count": 7,
+   "id": "06b5eaf1-dac4-40e8-bdbb-e1b4f47bea2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_parquet('data/yellow_tripdata_2023-01.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3d05831c-b808-486a-90f7-96cfebca1bcf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2.1.4'"
+       "(3066766, 19)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.__version__"
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c815f74-e9ec-4a84-82d0-ff8b9bd0cb02",
+   "metadata": {},
+   "source": [
+    "Q1: How many columns are there?<br>\n",
+    "ِAnswer: 19"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "670fb062-7d61-4dcb-a8a1-9b18d04f7a17",
+   "execution_count": 9,
+   "id": "66b5be5a-129f-43b9-99d6-be481d9d31a7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_parquet('https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2024-01.parquet')"
+    "df.tpep_pickup_datetime = pd.to_datetime(df.tpep_pickup_datetime)\n",
+    "df.tpep_dropoff_datetime = pd.to_datetime(df.tpep_dropoff_datetime)\n",
+    "\n",
+    "df['duration'] = df.tpep_dropoff_datetime - df.tpep_pickup_datetime\n",
+    "df.duration = df.duration.apply(lambda td: td.total_seconds() / 60)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "9ff96d81-f98d-422a-943d-63cd09e23527",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>VendorID</th>\n",
-       "      <th>tpep_pickup_datetime</th>\n",
-       "      <th>tpep_dropoff_datetime</th>\n",
-       "      <th>passenger_count</th>\n",
-       "      <th>trip_distance</th>\n",
-       "      <th>RatecodeID</th>\n",
-       "      <th>store_and_fwd_flag</th>\n",
-       "      <th>PULocationID</th>\n",
-       "      <th>DOLocationID</th>\n",
-       "      <th>payment_type</th>\n",
-       "      <th>fare_amount</th>\n",
-       "      <th>extra</th>\n",
-       "      <th>mta_tax</th>\n",
-       "      <th>tip_amount</th>\n",
-       "      <th>tolls_amount</th>\n",
-       "      <th>improvement_surcharge</th>\n",
-       "      <th>total_amount</th>\n",
-       "      <th>congestion_surcharge</th>\n",
-       "      <th>Airport_fee</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2024-01-01 00:57:55</td>\n",
-       "      <td>2024-01-01 01:17:43</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.72</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>N</td>\n",
-       "      <td>186</td>\n",
-       "      <td>79</td>\n",
-       "      <td>2</td>\n",
-       "      <td>17.7</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>22.70</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2024-01-01 00:03:00</td>\n",
-       "      <td>2024-01-01 00:09:36</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.80</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>N</td>\n",
-       "      <td>140</td>\n",
-       "      <td>236</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>3.75</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>18.75</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2024-01-01 00:17:06</td>\n",
-       "      <td>2024-01-01 00:35:01</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4.70</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>N</td>\n",
-       "      <td>236</td>\n",
-       "      <td>79</td>\n",
-       "      <td>1</td>\n",
-       "      <td>23.3</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>31.30</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2024-01-01 00:36:38</td>\n",
-       "      <td>2024-01-01 00:44:56</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.40</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>N</td>\n",
-       "      <td>79</td>\n",
-       "      <td>211</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>17.00</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2024-01-01 00:46:51</td>\n",
-       "      <td>2024-01-01 00:52:57</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>N</td>\n",
-       "      <td>211</td>\n",
-       "      <td>148</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7.9</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>3.20</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>16.10</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   VendorID tpep_pickup_datetime tpep_dropoff_datetime  passenger_count  \\\n",
-       "0         2  2024-01-01 00:57:55   2024-01-01 01:17:43              1.0   \n",
-       "1         1  2024-01-01 00:03:00   2024-01-01 00:09:36              1.0   \n",
-       "2         1  2024-01-01 00:17:06   2024-01-01 00:35:01              1.0   \n",
-       "3         1  2024-01-01 00:36:38   2024-01-01 00:44:56              1.0   \n",
-       "4         1  2024-01-01 00:46:51   2024-01-01 00:52:57              1.0   \n",
-       "\n",
-       "   trip_distance  RatecodeID store_and_fwd_flag  PULocationID  DOLocationID  \\\n",
-       "0           1.72         1.0                  N           186            79   \n",
-       "1           1.80         1.0                  N           140           236   \n",
-       "2           4.70         1.0                  N           236            79   \n",
-       "3           1.40         1.0                  N            79           211   \n",
-       "4           0.80         1.0                  N           211           148   \n",
-       "\n",
-       "   payment_type  fare_amount  extra  mta_tax  tip_amount  tolls_amount  \\\n",
-       "0             2         17.7    1.0      0.5        0.00           0.0   \n",
-       "1             1         10.0    3.5      0.5        3.75           0.0   \n",
-       "2             1         23.3    3.5      0.5        3.00           0.0   \n",
-       "3             1         10.0    3.5      0.5        2.00           0.0   \n",
-       "4             1          7.9    3.5      0.5        3.20           0.0   \n",
-       "\n",
-       "   improvement_surcharge  total_amount  congestion_surcharge  Airport_fee  \n",
-       "0                    1.0         22.70                   2.5          0.0  \n",
-       "1                    1.0         18.75                   2.5          0.0  \n",
-       "2                    1.0         31.30                   2.5          0.0  \n",
-       "3                    1.0         17.00                   2.5          0.0  \n",
-       "4                    1.0         16.10                   2.5          0.0  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "4cdcd047-b357-47c4-a73f-e86620c54a00",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sklearn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "9642f898-0f2a-49fb-8be6-4964084dd9b9",
+   "execution_count": 10,
+   "id": "45d28714-2e47-4251-b77c-e1405152f7cd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1.2.2'"
+       "count    3.066766e+06\n",
+       "mean     1.566900e+01\n",
+       "std      4.259435e+01\n",
+       "min     -2.920000e+01\n",
+       "25%      7.116667e+00\n",
+       "50%      1.151667e+01\n",
+       "75%      1.830000e+01\n",
+       "max      1.002918e+04\n",
+       "Name: duration, dtype: float64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sklearn.__version__"
+    "df['duration'].describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "474569c0-6e47-41da-93dd-f61a1c9cf19c",
+   "metadata": {},
+   "source": [
+    "Q2: What's the standard deviation of the trips duration in January?<br>\n",
+    "Answer: 42.59"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b44a76c5-3d74-43ef-9527-d97ccea51253",
+   "execution_count": 11,
+   "id": "a576ed19-e8f6-456b-a2e3-033c913f9681",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = df[(df.duration >= 1) & (df.duration <= 60)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "143c6a54-2cab-4556-a1dc-9bac6f1a2261",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3009173, 20)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f807b8bd-bda4-4bdc-a004-8d1c3d9e7d01",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "98.1220282212598"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Q3 = (3009173/3066766) * 100\n",
+    "Q3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c3f4cbe-da26-40a1-96b9-a472da422a30",
+   "metadata": {},
+   "source": [
+    "Q3: What fraction of the records left after you dropped the outliers?<br>\n",
+    "Answer: 98%"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "295ec271-7db8-4b6b-b7cd-80ad2abd64f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_datafram(filname):\n",
+    "    df = pd.read_parquet(filname)\n",
+    "\n",
+    "    df.tpep_pickup_datetime = pd.to_datetime(df.tpep_pickup_datetime)\n",
+    "    df.tpep_dropoff_datetime = pd.to_datetime(df.tpep_dropoff_datetime)\n",
+    "    \n",
+    "    df['duration'] = df.tpep_dropoff_datetime - df.tpep_pickup_datetime\n",
+    "    df.duration = df.duration.apply(lambda td: td.total_seconds() / 60)\n",
+    "    \n",
+    "    df = df[(df.duration >= 1) & (df.duration <= 60)]\n",
+    "    \n",
+    "    features = ['PULocationID', 'DOLocationID']\n",
+    "    \n",
+    "    df[features ] = df[features ].astype(str)\n",
+    "    \n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "6adf253d-1c94-4b91-84b4-76f9ae596d0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df = read_datafram('data/yellow_tripdata_2023-01.parquet')\n",
+    "val_df = read_datafram('data/yellow_tripdata_2023-02.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "487591b4-e62b-4fbb-944b-ecb24b541fc3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = ['PULocationID', 'DOLocationID']\n",
+    "\n",
+    "dv = DictVectorizer()\n",
+    "\n",
+    "train_dicts = train_df[features].to_dict(orient='records')\n",
+    "X_train = dv.fit_transform(train_dicts)\n",
+    "y_train = train_df['duration'].values\n",
+    "\n",
+    "val_dicts = val_df[features].to_dict(orient='records')\n",
+    "X_val = dv.transform(val_dicts)\n",
+    "y_val = val_df['duration'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "7cb86f2c-470b-4170-9b6a-2f43915bd37d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3009173, 515)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ade17247-b6bc-44e3-8986-d6aa74fa2db7",
+   "metadata": {},
+   "source": [
+    "Q4: What's the dimensionality of this matrix (number of columns)?<br>\n",
+    "Answer: 515"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "4062bfa7-2d46-421b-98db-2b6644970dd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE on train:  7.649261930819891\n"
+     ]
+    }
+   ],
+   "source": [
+    "lr = LinearRegression()\n",
+    "lr.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = lr.predict(X_train)\n",
+    "\n",
+    "rmse_train  = mean_squared_error(y_train, y_pred, squared=False)\n",
+    "\n",
+    "print('RMSE on train: ', rmse_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5dac169c-1d71-4fb4-9cd6-9efb0bea4441",
+   "metadata": {},
+   "source": [
+    "Q5: What's the RMSE on train?<br>\n",
+    "Answer: 7.65 or the closest number to it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "2ee1abc3-6441-44c6-86d7-08accbc36757",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE on validation:  7.811817675774269\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = lr.predict(X_val)\n",
+    "\n",
+    "rmse_val = mean_squared_error(y_val, y_pred, squared=False)\n",
+    "\n",
+    "print('RMSE on validation: ', rmse_val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65ad85ef-0287-4f63-b3a8-958dfa202d2a",
+   "metadata": {},
+   "source": [
+    "Q6: What's the RMSE on validation?<br>\r\n",
+    "Answer 7.81  or the closest number to it"
+   ]
   }
  ],
  "metadata": {
